@@ -1,12 +1,11 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA512
 
-DIST atomize-0.1.0.tar.gz 5229 RMD160 16a4061b8381f17fb13fe8871bfe37a3d86c4327 SHA1 ffa0291c5234d3fc1c26cdc688391879ccf48249 SHA256 6ffc8cce3f7c5db080675bbe6b056f9344b5990f83987e7e5a3b56f400d2ac36
 DIST atomize-0.1.1.tar.gz 5218 RMD160 dda93e33225ff7c2a603cf5db0a27fd43ceb5f20 SHA1 aae39a376be73500972b69e0d69a497ce922b5aa SHA256 efc4f865f0d13f8500a6f15d70e50a620670ac9bc664453411eb7a12a96f9f18
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.17 (GNU/Linux)
 
-iEYEAREKAAYFAk8ZmswACgkQzJrj3cAXR0lUTwCfRT7Y+ci2P8JwpQ+jE4Sutb0l
-nDIAn1nnpvAdsE+0MMNkEkAtnE0Qp3Kv
-=X6hw
+iEYEAREKAAYFAk8Z7icACgkQzJrj3cAXR0mXZQCfWYlBVY5L2Sn7ZX6fTCNxNYzX
+kDMAoI+8aH0MWMSNng9T/7gVZwr+C0dU
+=WJvo
 -----END PGP SIGNATURE-----
