@@ -15,7 +15,7 @@ DESCRIPTION="A simple Python package for easily generating Atom feeds"
 
 LICENSE="EPL-1.0"
 SLOT="0"
-KEYWORDS="amd64 ~x86"
+KEYWORDS="amd64 x86"
 IUSE=""
 
 DEPEND=""
