@@ -1,4 +1,3 @@
-REM 2012-01-20 *1 MSG %"Stabilise x86 dev-python/atomize-0.1.1%" %a
 REM 2012-01-20 *1 MSG %"Stabilise x86 dev-python/html2data-0.4.3%" %a
 REM 2012-01-20 *1 MSG %"Stabilise x86 media-gfx/sphinxcontrib-blockdiag-1.0.1%" %a
 REM 2012-01-20 *1 MSG %"Stabilise x86 app-text/sphinxcontrib-httpdomain-1.1.6%" %a
